[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "keyper-mcp"
version = "1.0.0"
description = "A local, encrypted secrets vault served to your AI over MCP — stop pasting API keys into chats."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sharvil Saxena" }]
keywords = ["mcp", "secrets", "vault", "encryption", "ai", "api-keys", "keychain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=41",
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
# Needed only for OS-keychain mode. Passphrase mode works without it.
keychain = ["keyring>=24"]

[project.urls]
Homepage = "https://github.com/sharziki/keyper"
Repository = "https://github.com/sharziki/keyper"
Issues = "https://github.com/sharziki/keyper/issues"

[project.scripts]
keyper = "keyper:main"

[tool.setuptools]
py-modules = ["keyper"]
